--- a/final_prediction.ipynb
+++ b/final_prediction.ipynb
@@ -1267,8 +1267,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "cc85a35a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "image_id    0\n",
+      "label       0\n",
+      "variety     0\n",
+      "age         0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check if the data frame has null values\n",
+    "print(df.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a968983",
    "metadata": {},
    "outputs": [],
    "source": []
